# FastAPI

./: Books.py  README.md  pyproject.toml  test.ipynb  testdb.db  testdb.db-journal
Books/: books.py  books2.py
TodoApp/: SQL-Insert-script.sql  database.py  main.py  models.py  todosapp.db
TodoApp/routers/: admin.py  auth.py  todos.py  users.py
TodoApp/test/: test_admin.py  test_auth.py  test_example.py  test_main.py  test_todos.py  test_users.py  testdb.db  todosapp.db  utils.py
